[project]
name = "nlp-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabian Beez",email = "desjardinslegedz@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "num2words (>=0.5.14,<0.6.0)",
    "torch (>=2.7.1,<3.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
